# RL-Reciept-OCR

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
agents/: __init__.py  base.py  encoding.py  heuristic.py  ppo.py
dataset/Receipt dataset/: meta.json
docs/: README.md
docs/architecture/: README.md  frameworks-and-libraries.md  how-rl-is-applied.md  overall-system-architecture.md
docs/hackathon/: baseline-scores.md  hackathon.md  openenv_option_a_receipt_plan.md
docs/howto/: local-setup-and-baseline.md  run-eval-api-ui.md
docs/walkthrough/: receipt-score-examples.md
env/: __init__.py  candidate_retrieval.py  config.py  dataset.py  environment.py  eval_api.py  evaluation.py  graders.py  image_store.py  llm_cache.py  models.py  normalizers.py  openenv_web.py  rewards.py  server.py  tasks.py  utils.py
scripts/: build_selection_dataset.py  convert_images_to_json.py  evaluate_dataset_images.py  prepare_sroie.py  smoke_test.py  validate-submission.sh  validate_local.py  validate_local.sh
server/: app.py
tests/: test_agents_encoding.py  test_agents_ppo.py  test_config.py  test_dataset.py  test_determinism.py  test_environment.py  test_eval_api.py  test_evaluation.py  test_graders.py  test_image_store.py  test_inference.py  test_llm_cache.py  test_normalizers.py  test_openenv_integration.py  test_receipt_task_metrics.py  test_rewards.py  test_server.py  test_task_behavior.py
training/: __init__.py  build_bc_data.py  eval_policy.py  train_bc.py  train_ppo.py
(+414 files in other folders)
